--- a/backup/HexoSrc/source/_posts/电脑小白系列之电脑日常管理.md
+++ b/backup/HexoSrc/source/_posts/电脑小白系列之电脑日常管理.md
@@ -15,7 +15,7 @@ update: {{ update }}
 ## 文件管理 ##
 打开`我的电脑`，可以看到C盘D盘等。一般的桌面上的所有文件也是存储于C盘用户目录下。计算机对于文件管理，是以树型结构进行管理的，每个盘符可以看做一个树根，其下的每个文件夹都可以看做是子树或形象点说是树枝，对于经常查看文件管理器的人来说，这已经是老生常谈，但我要说的是针对常用软件安装目录与个人文件保存问题。
 
->`C盘`是系统盘，基本都是大多数软件的默认安装盘，一般常见的安装系统C盘空间大小是50G，只要C盘还留有足够空间，系统并不提示C盘空间不足，那都是没关系的。操作系统windows大多数软件、文件、配置都保存在C盘中，比如office软件，系统自带的工具软件。但是现在的网络环境，很多软件都安装在C盘，个人下载也是默认在C盘，长时间使用C盘的软件，也会给C盘带来缓存文件，这样就会给C盘带来很多文件，当然，只要C盘有空间，这都是没关系的，只是个人下载文件、桌面文件都在C盘，如果电脑出现问题，需要重装系统解决，那么C盘将会清空并重新写盘，日常下载的文件、桌面文件都会清空且永久找不回。
+>`C盘`是安装windows系统的系统盘，基本都是大多数软件的默认安装盘，一般常见的安装系统C盘空间大小是50G，只要C盘还留有足够空间，系统并不提示C盘空间不足，那都是没关系的。操作系统windows大多数软件、文件、配置都保存在C盘中，比如office软件，系统自带的工具软件。但是现在的网络环境，很多软件都安装在C盘，个人下载也是默认在C盘，长时间使用C盘的软件，也会给C盘带来缓存文件，这样就会给C盘带来很多文件，当然，只要C盘有空间，这都是没关系的，只是个人下载文件、桌面文件都在C盘，如果电脑出现问题，需要重装系统解决，那么C盘将会清空并重新写盘，日常下载的文件、桌面文件都会清空且永久找不回。
 
 >`其它盘`对widows来说，基本相同，除非是系统隐藏分区。安装windows系统，正常情况下都是只对C盘操作，其它盘文件都不作更改。因此，在日常管理上，个人重要文件尽量放在其它盘;其它软件，如视频软件、迅雷下载软件等，对其下载目录也最好是其它盘，且目录名可分辨。这样，自己下载的文件、个人编写的文件不会因为C盘的变动而被删除。
 
@@ -24,4 +24,22 @@ update: {{ update }}
 ## 软件管理 ##
 鉴于国内的软件环境，尤其是百度系列，我们会发现，对于不常使用电脑的老年人、只用电脑看韩剧的软妹了，电脑中会出现过多无用或重复的软件。这里就说下软件使用问题，并自荐下[个人常用软件列表](https://lysnake.github.io/archives/technology/%E5%B8%B8%E7%94%A8%E8%BD%AF%E4%BB%B6%E6%8E%A8%E8%8D%90.html)。
 ### 杀毒软件 ###
->其实吧，现在操作系统自身的防御能力已经很强的，不再经常看到电脑中毒了，虽然没有不存在BUG的软件(系统),但能找出BUG的人，都不是缺钱的人了。现在如果说还有中毒的人，那真的是要找自己的原因，因为那都是自己进不该进的网站误下可执行的软件(病毒)。在windows下，对于小白来说，能遇见执行的病毒，都是exe为扩展名的可执行文件，所以如果下载到的所有软件
+其实吧，现在操作系统自身的防御能力已经很强了，不再经常看到电脑中毒了，虽然没有不存在BUG的软件(系统),但能找出BUG的人，都不是缺钱的主。现在如果说还有中毒的人，那真的是要找自己的原因，因为那都是自己进不该进的网站误下可执行的软件(病毒)。在windows下，对于小白来说，能遇见执行的病毒，都是exe为扩展名的可执行文件，所以如果上网下载的文件是exe文件，那么小白应该警惕，不要执行它，除非你知道会带来什么。但是，在生活中，小白都是金山、360、电脑管家、百度杀毒二个或多个重复杀毒功能的软件，大多情况下，其实他们并没有用，尤其是电脑管家和百度杀毒，反而会带来卡慢，百度杀毒更加是自身就是病毒。如果要安装，建议仅安装360或金山，自从win7开始，我就没怎么用杀毒软件了，但是金山和360杀毒其它管理功能还是很不错的，比如开机加速、强制删除文件等。
+
+### 重复软件 ###
+前面提到杀毒软件功能重复，在小白的电脑中，同时存在360浏览器、橙子浏览器、chrome、firefox,这里也同样是重复功能的软件，占用硬盘空间并且有可能占用内存，导致操作响应过慢，个人推荐chrome或firefox，最新版的chrome和firefox能更好的支持网页渲染，看到更多网页特效，也能有更好的加载速度，更有强大的插件功能。明显的，每种功能的软件，正常情况下只要一个就好。对于已知无用的软件，占用了硬盘空间，如果开机自启，还会影响开机速度和占用内存，造成电脑卡慢，这个时候应该使用windows自带的软件管理工具或360、金山杀毒的软件管理工具，对无用软件进行卸载清除。
+
+### 软件黑名单 ###
+**百度系**是常见的软件黑名单，安装一个百度系软件，默认推荐安装其它软件，这就是为什么小白电脑里那么多不知用处的软件的原因，如果可以，尽量少用百度搜索，因为百度推荐、百度认证很有问题，并且搜索精准度并不高，在安装系统时使用的PE系统大白菜，百度认证认证的一个所谓的官网，居然是个高仿假网站，以此安装的系统，完全可能自带病毒、广告。16年的莆田系医院、血友病吧问题，有理由直接把百度直接拉入黑名单，目前已知百度好用的产品，也就只有百度云盘了。另外，如果你还是使用百度，建议你不要在网页上登录百度，因为你登录后，你在百度上搜索或其它百度网页操作的信息会被百度收集，然后进行所谓精准广告投放，而广告本身也存在很大的不可靠性，另外就是，你在网上所有的个人操作也是属于个人隐私，百度今天收集的信息，可能低价出售、安全原因泄漏等。不使用百度搜索了，大家可以使用bing搜索、google搜索，在[个人常用软件列表](https://lysnake.github.io/archives/technology/%E5%B8%B8%E7%94%A8%E8%BD%AF%E4%BB%B6%E6%8E%A8%E8%8D%90.html)中提供了使用方式。
+
+**不常见、非官网下载**的软件，也会有默认安装好几个其它软件或带来很多广告，也有可能是病毒的载体，如果不是很清楚执行的后果，最好是不要下载并执行。
+
+## 电脑优化 ##
+个人电脑中，如果已经不存在多余的软件、软件安装不会使C盘出现空间警告、文件保存结构清晰，我们还可以开始进行其它电脑优化来进一步改善个人电脑环境。这个时候，我们就可以使用360杀毒或金山毒霸，进行开机启动项优化，选择自己开机一定会使用的功能软件，让其开机自启动，其它软件取消开机启动，这样能加快开机速度，减少开机后内存使用。同样也可以用360或金山扫盘、清除无用文件、查杀病毒、删除某些情况下无法删除的文件等。
+
+像[个人常用软件列表](https://lysnake.github.io/archives/technology/%E5%B8%B8%E7%94%A8%E8%BD%AF%E4%BB%B6%E6%8E%A8%E8%8D%90.html)提到过的软件一样，安装自己常用的软件，配置自己最习惯的软件环境，比如chrome插件、翻墙、wox快速启动软件、everything快速搜索本地文件、开机自启动、开机自动联网等。
+
+## 误区 ##
+**硬盘碎片整理**:网上很多人说硬盘读取过慢是因为分区使用久后，产生了很多文件碎片，导致硬盘寻道时间增长，这个说法是有道理的，但这个说法只适合机械硬盘，固态硬盘不适用。另外一点就是，碎片整理的概念已经很久了，而且硬盘读取速度一直都是计算机性能瓶颈，所以现在的硬盘和操作系统，在软件算法上会有相关优化，尽量减少碎片的产生，所以对于目前来说，是没有必要进行碎片整理的，而且这个操作过程中如果关机等特殊情况，是会影响操作系统或其它分区无法正常使用，如无必要，不要考虑碎片整理。另外，早上固态硬盘，可以得到更好的性能体验。
+
+**缓存清理**：其实对于用户而言，缓存的存在本身是为了让软件有更好的体验的，比如看视频，对于已缓存的时段，是可以直接跳看的，而没有缓存的部分，选择后还要等待网络加载后才能观看，而其它软件的缓存其实基本都是一样的道理，都是为了不重复从网络上加载或重新生成而影响软件响应用户的操作用的。但存在另外一些软件文件，仅仅是软件生成出来备用的，正常情况下是使用不到的，这类文件相对很少但可以删除，比如软件的log文件，方便软件崩溃时，上送Log日志给官方维护修改使用。缓存文件相对分区大小来说，还是占用很少一部分，在不使分区空间不足的情况下，也不用考虑操作删除缓存。
