电脑小白系列之电脑硬件了解   未完全

--- a/backup/HexoSrc/source/_posts/电脑小白系列之电脑硬件了解.md
+++ b/backup/HexoSrc/source/_posts/电脑小白系列之电脑硬件了解.md
@@ -17,7 +17,7 @@ update:
 
 >*运算器、控制器（CPU）*：这二个基本部件，在工程实现上都存在于中央控制处理器CPU中，有任何操作请求，一定都会到CPU中请求处理。在实际用户操作中，所有用户操作，都会抽象成一系列的数学运算、逻辑运算，也都要交于CPU处理，所以CPU决定了计算机最高处理性能，在个人组装机中，优先选择的都是CPU，其次再选择其它硬件设备。
 
->*存储器*：存储器类别很多，在小白的眼里，只要记得内存、硬盘（移动硬盘）、U盘、固态硬盘这几样就好了。按主流硬件读取速度来说，内存>固态>U盘>硬盘，特殊一点的是内存是一个断电就会丢失存储数据的一个临时存储设备，充当CPU与硬盘（机械硬盘和固态硬盘）之间的高速缓存。个人电脑中所有数据都要从内存中读取进CPU再进行处理，但对于计算机来说，不一定要有内存计算机才能运行。
+>*存储器*：存储器类别很多，在小白的眼里，只要记得内存、硬盘（移动硬盘）、U盘、固态硬盘(SSD)这几样就好了。按主流硬件读取速度来说，内存>固态>U盘>硬盘，特殊一点的是内存是一个断电就会丢失存储数据的一个临时存储设备，充当CPU与硬盘（机械硬盘和固态硬盘）之间的高速缓存。个人电脑中所有数据都要从内存中读取进CPU再进行处理，但对于计算机来说，不一定要有内存计算机才能运行。
 
 >**输入设备*：输入设备常见的有键盘、鼠标、麦、触摸板、手写板，接收用户操作(转换成数据)给计算机进行处理。
 
@@ -37,4 +37,14 @@ update:
 前面提到过，内存是`一个断电就会丢失存储数据的一个临时存储设备，充当CPU与硬盘（机械硬盘和固态硬盘）之间的高速缓存`,目前老电脑都是4G内存，主流已经开始8G内存了，现如今手机都开始8G内存了。内存在计算机体系系统中，充当CPU与硬盘之间的高速缓存，对于计算机来说，内存越大越好，如果可以，操作系统会根据用户常用软件、文件等，尽可能把内存全部使用完。当前内存的速度在第三代内存DDR3的1600MHZ左右，新的Skylake系列支持第四代内存DDR4的2133MHZ。
 
 ### 硬盘 ###
-目前市场的机械硬盘都是1T，500G的机械硬盘开始减少，硬盘是一种相对永久的存储设备，所有文件、软件都保存在硬盘中。机械硬盘可以说是常见存储设备中读写速度最慢的设备了，目前常见的固态硬盘，
+目前市场的机械硬盘都是1T，500G的机械硬盘开始减少，另外，还有固态硬盘(SSD)，读写速度是机械硬盘的好几倍，常见的还只是128G和256G，它们都是一种相对永久的存储设备，所有文件、软件都保存在硬盘中。现在，CPU和内存的性能都在快速提升，而机械硬盘受限于机械结构，读写速度提升相对过慢，已成为计算机体系的一个瓶颈，目前苹果电脑都配有固态硬盘，开机流畅响应快速，如果你也想有这样的电脑体验，请安装固态硬盘，把系统安装在固态硬盘中，常用软件也安装在固态硬盘中，如果还有机械硬盘，把不常用文件使用机械硬盘存储。另外，读写快速的固态硬盘，也只是能更快速地把文件从固态硬盘上读写到内存中，以此来加快开机速度和响应速度，但并不能改变CPU的执行速度和内存的读写速度，但确实会有更好的用户体验。
+
+### 显示器 ###
+### 键盘、鼠标 ###
+### 电源 ###
+
+
+
+## 引申链接 ##
+[<鸟哥的linux私房菜>中关于硬件的形象化描述](http://linux.vbird.org/linux_basic/0130designlinux.php#hardware)
+[<鸟哥的linux私房菜>之开机流程](http://linux.vbird.org/linux_basic/0510osloader.php#startup)
