更新常用软件，备份头像

--- a/backup/HexoSrc/source/_posts/常用软件推荐.md
+++ b/backup/HexoSrc/source/_posts/常用软件推荐.md
@@ -37,7 +37,7 @@ tags:
 
 [Tampermonkey](https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo):很强大的插件，允许运行JS充当功能，相关JS文件可以去[Greasy Fork](https://greasyfork.org/zh-CN)下载，比如一些特殊网站的JS，免登录使用zhihu，购物党比价工具、下载youtube视频等。
 
-[Bootstrap](https://chrome.google.com/webstore/detail/bootstrap-twitter-offline/gihkgljdimgfffabkemicpaeljmoobil?utm_source=chrome-ntp-icon):Bootstrap库。
+[Bootstrap](https://chrome.google.com/webstore/detail/bootstrap-twitter-offline/gihkgljdimgfffabkemicpaeljmoobil?utm_source=chrome-ntp-icon):Bootstrap离线库文档，但版本不够新。
 
 [Vimium](https://chrome.google.com/webstore/detail/vimium/dbepggeogbaibhgnhhndojpepiihcmeb?hl=zh-CN):游览网站像操作vim一样操作。
 
