增加几个chrome插件

--- a/backup/HexoSrc/source/_posts/常用软件推荐.md
+++ b/backup/HexoSrc/source/_posts/常用软件推荐.md
@@ -29,7 +29,7 @@ tags:
 
 [擴充功能uBlock Origin](https://chrome.google.com/webstore/detail/ublock-origin/cjpalhdlnbpafiamejdnhcphjbkeiagm):一款高效率的廣告攔截工具。
 
-[遠方 New Tab](https://chrome.google.com/webstore/detail/dream-afar-new-tab/henmfoppjjkcencpbjaigfahdjlgpegn):打开一个新页面，背景图都是实时更新的美图。
+[遠方 New Tab](https://chrome.google.com/webstore/detail/dream-afar-new-tab/henmfoppjjkcencpbjaigfahdjlgpegn):打开一个新标签页，背景图都是实时更新的美图，与[掘金](https://juejin.im/extension/?utm_source=extension&utm_medium=zhihu&utm_campaign=20595240)冲突。
 
 [Octotree](https://chrome.google.com/webstore/detail/octotree/bkhaagjahfmjljalopjnoealnfndnagc):在[github](www.github.com)上，打开一个项目，能在左侧以windows资源管理器一样以树状图显示项目文件结构。
 
@@ -42,6 +42,10 @@ tags:
 [Vimium](https://chrome.google.com/webstore/detail/vimium/dbepggeogbaibhgnhhndojpepiihcmeb?hl=zh-CN):游览网站像操作vim一样操作。
 
 [google翻译](https://chrome.google.com/webstore/detail/google-translate/aapbdbdomjkkjkaonfhkkikfgjllcleb):翻译网页或选中字词或短语时翻译。
+
+[掘金](https://juejin.im/extension/?utm_source=extension&utm_medium=zhihu&utm_campaign=20595240)：在新标签页展示内容，为设计师、程序员、产品经理每日发现优质内容。与[遠方 New Tab](https://chrome.google.com/webstore/detail/dream-afar-new-tab/henmfoppjjkcencpbjaigfahdjlgpegn)冲突。
+
+[Send to Kindle](https://chrome.google.com/webstore/detail/send-to-kindle-by-klipme/ipkfnchcgalnafehpglfbommidgmalan):一键发送网页文章到Kindle阅读器。
 
 [chrome有哪些好用的插件](https://www.zhihu.com/question/23228162)
 
