--- a/backup/HexoSrc/source/_posts/常用软件推荐.md
+++ b/backup/HexoSrc/source/_posts/常用软件推荐.md
@@ -78,6 +78,8 @@ tags:
 
 [Listary](http://www.listary.com/):如功能和Wox一样，但是匹配没有Wox好。来自[wsgzao的博客](https://wsgzao.github.io/post/windows/)。
 
+[SourceTree](https://www.sourcetreeapp.com/):git应用Gui程序，支持windows、iOS平台。
+
 [Ubuntu on Windows](http://www.xitongcheng.com/jiaocheng/win10_article_27723.html):在windows 10下安装ubuntu子系统，即可不用虚拟机，也能有linux环境，可用于开发。但目前该系统还有很多坑要填，而且下载也是要win搭个梯子。
 
 [Gvim](http://www.vim.org/download.php):win下的GUI VIM，如果不是一定要vim才能快速编辑或能熟练使用，还是不要在win下使用vim，相对不是那么友好。(比如常算之后多少个char，使用vim还是很快的)
@@ -87,7 +89,7 @@ tags:
 
 [护眼宝](http://www.huyanbao.com)：修改屏幕色彩，相传更护眼。有Android、iOS、MAC、windows版。
 
-[TeamViewer](http://www.zdfans.com/789.html):远程控制，内网穿透，VPN共享，跨平台.对个人免费。目前没有使用过，来自[wsgzao的博客](https://wsgzao.github.io/post/windows/)。
+[TeamViewer](https://www.teamviewer.com/zhcn/):远程控制，内网穿透，VPN共享，跨平台.对个人免费。目前没有使用过，来自[wsgzao的博客](https://wsgzao.github.io/post/windows/)。
 
 [AnyDesk](https://anydesk.com/remote-desktop):远程控制效果或许会超出你的想象，作为TeamViewer备用方案,来自[wsgzao的博客](https://wsgzao.github.io/post/windows/)。
 
@@ -123,7 +125,7 @@ tags:
 
 [易数一键还原](http://www.onekeyrestore.cn/):以DiskGenius为内核开发，安全易用靠谱,同时推荐ORM一键还原系统。
 
-[DiskGenius ](https://pan.baidu.com/s/1kTj3b75):国内磁盘分区和数据恢复的佼佼者,Mod By MyCrack.
+[DiskGenius](http://www.diskgenius.cn/):国内磁盘分区和数据恢复的佼佼者,Mod By MyCrack.
 
 [EaseUS Data Recovery Wizard](http://www.0daydown.com/?s=EaseUS+Data+Recovery):原先是国产易我数据恢复，现在依旧犀利啊
 
