基本完成[电脑小白之操作系统安装].

--- a/backup/HexoSrc/source/_posts/操作系统安装.md
+++ b/backup/HexoSrc/source/_posts/操作系统安装.md
@@ -1,5 +1,5 @@
 layout: post
-title: 操作系统安装
+title: 电脑小白之操作系统安装
 date: 2017-05-06 01:34:38
 categories:
   - archives
@@ -42,8 +42,16 @@ update: {{ update }}
 **所以，安装系统最重要的就是要备份好自己的文件，数据无价**
 
 ###针对小白的虚拟机安装系统练习###
-###计算机多系统安装###
+使用[VMware](http://www.vmware.com/cn.html)或[VirtualBox](https://www.virtualbox.org/wiki/Downloads)虚拟软件，在windows系统上，进行安装虚拟系统，可以试着了解下安装系统会有什么操作、大概过程是什么，这种方式安装对现有系统很安装，要安装的虚拟系统与现在使用中的系统是完全分离的，不会影响现有分区与数据，仅会写入一个比较大的文件，但这个方式对于很老的电脑来说，可能会很卡。
 
+[VirtualBox安装win7教程](http://blog.xuite.net/yh96301/blog/30283132-VirtualBox+%E5%AE%89%E8%A3%9D+Windows+7+%E4%BD%9C%E6%A5%AD%E7%B3%BB%E7%B5%B1)
+###计算机多系统安装###
+了解下[多系统引导](http://cn.linux.vbird.org/linux_basic/0130designlinux_2.php#partition_mbr)，可以实现在一个实体机中，同时安装windows、iOS、linux系多个系统，可以每次开机选择自己要进入的系统，实现windows日常使用，linux、iOS办公，当然，这个也可以装虚拟机。原理简单的说就是开机启动后，主板BOIS会读硬盘固定位置数据（引导程序代码），BOIS把CPU控制执行权交给引导程序，引导程序再从硬盘分区上找到安装了系统的的分区再把CPU控制权给操作系统，因此可以有多个分区分别装有不同的系统，让这引导程序引导进行选择运行哪个系统。
+
+
+###
 [正版windows系统文件下载](http://msdn.itellyou.cn/)
 
 [硬盘分区与引导程序](http://cn.linux.vbird.org/linux_basic/0130designlinux_2.php#partition_table)
+
+[EasyBCD修复引导程序](http://neosmart.net/EasyRE/)
