--- a/backup/HexoSrc/source/_posts/电脑小白系列之常用软件推荐.md
+++ b/backup/HexoSrc/source/_posts/电脑小白系列之常用软件推荐.md
@@ -113,6 +113,8 @@ tags:
 
 [openwrt](https://github.com/softwaredownload/openwrt-fanqiang):实现路由器自动云梯，且因内置linux系统，可定制化功能，比如外接硬盘当网盘、自动下载BT等。但路由器成本不低，适合居家使用，未曾试用过。
 
+[UZER.ME](https://uzer.me/):云端软件，常见的如chrome、AI、PS等与办公想关。默认翻墙chrome可以进google、youtube。
+
 [更多梯子](https://wsgzao.github.io/post/fq/):这里罗列的方案，大都末使用过。
 
 
