测试日期引起的bug(因为不是jekyll生成的static site，所以要添加.nojekyll文件关闭github的jekyll检查)

--- a/backup/HexoSrc/source/_posts/电脑小白系列之操作系统安装.md
+++ b/backup/HexoSrc/source/_posts/电脑小白系列之操作系统安装.md
@@ -6,6 +6,7 @@ categories:
   - technology
 tags:
   - 电脑小白
+updated: {{ updated }}
 ---
 主要介绍windows系统安装，以此让小白放心安装其它系统，比如手机Android、iOS，以及PC上的linux系统。
 <!-- more -->
