--- a/backup/HexoSrc/source/_posts/电脑小白系列之电脑日常管理.md
+++ b/backup/HexoSrc/source/_posts/电脑小白系列之电脑日常管理.md
@@ -7,6 +7,7 @@ categories:
 tags:
   - 电脑小白
 date: 2017-02-09 21:03:48
+updated: {{ updated }}
 ---
 在生活中经常会碰到电脑乱成一团，软件都是百度系，各种小广告软件，重复软件，一台电脑同时存在360、百度、腾讯、金山多家杀软，有这些特点的人大多是文科生为主，次之还有老一代人。对此，本文主要说些电脑文件管理、软件管理等常见的小白问题。
 <!-- more -->
