--- a/backup/HexoSrc/source/_posts/电脑小白系列之电脑硬件了解.md
+++ b/backup/HexoSrc/source/_posts/电脑小白系列之电脑硬件了解.md
@@ -7,6 +7,7 @@ categories:
 tags:
   - 电脑小白
 date: 2017-02-19 17:46:46
+updated:  {{ updated }}
 ---
 本方主要讲下常用电脑中的硬件与相关功能，旨在了帮助小白了解计算机硬件。
 <!-- more -->
