1.复习《C++3》并修改某些错误。 2.完成《SQL 学习(1)》

--- a/backup/HexoSrc/source/_posts/常用软件推荐.md
+++ b/backup/HexoSrc/source/_posts/常用软件推荐.md
@@ -52,6 +52,9 @@ tags:
 ---
 
 ## windows ##
+
+[检测性能软件]CPU-Z + GPU-Z + AIDA64，dmark、国际象棋
+
 [如何优雅使用windows 10](https://www.zhihu.com/question/32129337):来自zhihu的问答。
 
 [Atom](https://atom.io/)：Atom 是 Github 专门为程序员推出的一个跨平台文本编辑器。具有简洁和直观的图形用户界面，并有很多有趣的特点：支持CSS，HTML，JavaScript等网页编程语言。它支持宏，自动完成分屏功能，集成了文件管理器。
@@ -96,6 +99,8 @@ tags:
 [向日葵](http://sunlogin.oray.com/zh_CN/):官网信息(远程手机操作PC开机，控制)，来自[wsgzao的博客](https://wsgzao.github.io/post/windows/)。
 
 [licecap](http://www.cockos.com/licecap/):Gif文件录制工具。
+
+[火绒](https://www.huorong.cn/):杀毒软件。
 
 
 *Powertool*:系统清理工具。
