删除无用文档，添加Linux常用软件，SQL Server ,zsh,vscode, thefuck

--- a/backup/HexoSrc/source/_posts/常用软件推荐.md
+++ b/backup/HexoSrc/source/_posts/常用软件推荐.md
@@ -4,7 +4,7 @@ date: 2017-05-05 22:06:46
 updated: {{ updated }}
 comments: true
 categories:
-  - archives
+  - archiveslinux
   - technology
 tags:
 
@@ -112,6 +112,12 @@ tags:
 [zsh](https://github.com/robbyrussell/oh-my-zsh):更友好的shell(漂亮的themes，更多的输入匹配)。
 
 [vim](https://github.com/DemonCloud/Aix-Vim):linux下最常用的编辑器，代码高亮，跳转，IDE界面等，只是要配置成自己更适合的还要多去踩坑。
+
+[SQL Server for ubuntu](https://docs.microsoft.com/en-us/sql/linux/quickstart-install-connect-ubuntu):ubuntu 16.04版本上安装SQL Server。
+
+[thefuck](https://github.com/nvbn/thefuck):命令行自动处理人为命令错误，fuck.
+
+[vscode for linux](https://code.visualstudio.com/docs/setup/linux):linux上的vscode版本。
 
 ---
 ## 其它 ##
