--- a/backup/HexoSrc/source/_posts/常用软件推荐.md
+++ b/backup/HexoSrc/source/_posts/常用软件推荐.md
@@ -102,6 +102,8 @@ tags:
 
 [火绒](https://www.huorong.cn/):杀毒软件。
 
+[umdh](http://blog.csdn.net/johnsonblog/article/details/8165861)：windows平台C++程序查内存泄漏，[教程](http://blog.csdn.net/flyingleo1981/article/details/78127625).
+
 
 *Powertool*:系统清理工具。
 
