--- a/backup/HexoSrc/source/_posts/常用软件推荐.md
+++ b/backup/HexoSrc/source/_posts/常用软件推荐.md
@@ -53,6 +53,8 @@ tags:
 
 ## windows ##
 
+[Total Commander](http://www.ghisler.com/download.htm):功能强大的全能文件管理器。
+
 [检测性能软件]CPU-Z + GPU-Z + AIDA64，dmark、国际象棋
 
 [如何优雅使用windows 10](https://www.zhihu.com/question/32129337):来自zhihu的问答。
