增加[TCP包在TCP长连接中，会不会乱序的问题]

--- a/backup/HexoSrc/source/_posts/常用软件推荐.md
+++ b/backup/HexoSrc/source/_posts/常用软件推荐.md
@@ -53,6 +53,8 @@ tags:
 
 ## windows ##
 
+[最强IDE Visual Studio](https://msdn.itellyou.cn/):最强IDE，开发、调试功能强大，另外，对于某些语言的代码高亮，可以去[studiostyl](https://studiostyl.es)下载配置。如果无法下载，查看网页源码手动跳转到下载链接。另外，C++代码选择**Visual Assist**插件来增强跳转、搜索等功能。
+
 [Total Commander](http://www.ghisler.com/download.htm):功能强大的全能文件管理器。
 
 [检测性能软件]CPU-Z + GPU-Z + AIDA64，dmark、国际象棋
