增加软件推荐

--- a/backup/HexoSrc/source/_posts/常用软件推荐.md
+++ b/backup/HexoSrc/source/_posts/常用软件推荐.md
@@ -47,6 +47,7 @@ tags:
 
 [Send to Kindle](https://chrome.google.com/webstore/detail/send-to-kindle-by-klipme/ipkfnchcgalnafehpglfbommidgmalan):一键发送网页文章到Kindle阅读器。
 
+
 [chrome有哪些好用的插件](https://www.zhihu.com/question/23228162)
 
 ---
@@ -54,6 +55,8 @@ tags:
 ## windows ##
 
 [最强IDE Visual Studio](https://msdn.itellyou.cn/):最强IDE，开发、调试功能强大，另外，对于某些语言的代码高亮，可以去[studiostyl](https://studiostyl.es)下载配置。如果无法下载，查看网页源码手动跳转到下载链接。另外，C++代码选择**Visual Assist**插件来增强跳转、搜索等功能。
+
+[在线格式转换](https://www.docspal.com/)：在线的格式转换功能。
 
 [Total Commander](http://www.ghisler.com/download.htm):功能强大的全能文件管理器。
 
@@ -108,6 +111,7 @@ tags:
 
 [umdh](http://blog.csdn.net/johnsonblog/article/details/8165861)：windows平台C++程序查内存泄漏，[教程](http://blog.csdn.net/flyingleo1981/article/details/78127625).
 
+[中州韵输入法引擎](https://rime.im/)：很干净的输入法，皮肤也很简约，像程序员常用的皮肤一样，只是没有看到五笔输入法。
 
 *Powertool*:系统清理工具。
 
@@ -142,7 +146,7 @@ tags:
 
 [易数一键还原](http://www.onekeyrestore.cn/):以DiskGenius为内核开发，安全易用靠谱,同时推荐ORM一键还原系统。
 
-[DiskGenius](http://www.diskgenius.cn/):国内磁盘分区和数据恢复的佼佼者,Mod By MyCrack.
+[DiskGenius](http://www.diskgenius.cn/)、[分区助手](https://www.disktool.cn/):国内磁盘分区和数据恢复的佼佼者。
 
 [EaseUS Data Recovery Wizard](http://www.0daydown.com/?s=EaseUS+Data+Recovery):原先是国产易我数据恢复，现在依旧犀利啊
 
