添加新的软件

--- a/backup/HexoSrc/source/_posts/常用软件推荐.md
+++ b/backup/HexoSrc/source/_posts/常用软件推荐.md
@@ -86,6 +86,8 @@ tags:
 
 [检测性能软件]CPU-Z + GPU-Z + AIDA64，dmark、国际象棋
 
+[sysinternals](https://docs.microsoft.com/en-us/sysinternals/):整套Sysinternals实用程序汇总为一个下载。windows下的工具集套件。
+
 [如何优雅使用windows 10](https://www.zhihu.com/question/32129337):来自zhihu的问答。
 
 [Atom](https://atom.io/)：Atom 是 Github 专门为程序员推出的一个跨平台文本编辑器。具有简洁和直观的图形用户界面，并有很多有趣的特点：支持CSS，HTML，JavaScript等网页编程语言。它支持宏，自动完成分屏功能，集成了文件管理器。
