--- a/backup/HexoSrc/source/_posts/常用软件推荐.md
+++ b/backup/HexoSrc/source/_posts/常用软件推荐.md
@@ -88,6 +88,9 @@ tags:
 
 [sysinternals](https://docs.microsoft.com/en-us/sysinternals/):整套Sysinternals实用程序汇总为一个下载。windows下的工具集套件。
 
+
+[ultraedit](https://www.ultraedit.com/downloads/ultraedit-download/):主要用于windows下16进制读文件方便。
+
 [如何优雅使用windows 10](https://www.zhihu.com/question/32129337):来自zhihu的问答。
 
 [Atom](https://atom.io/)：Atom 是 Github 专门为程序员推出的一个跨平台文本编辑器。具有简洁和直观的图形用户界面，并有很多有趣的特点：支持CSS，HTML，JavaScript等网页编程语言。它支持宏，自动完成分屏功能，集成了文件管理器。
@@ -121,7 +124,6 @@ tags:
 [Gvim](http://www.vim.org/download.php):win下的GUI VIM，如果不是一定要vim才能快速编辑或能熟练使用，还是不要在win下使用vim，相对不是那么友好。(比如常算之后多少个char，使用vim还是很快的)
 
 [Clover](http://cn.ejie.me/):让windows系统的文件管理器像chrome一样，支持多标签页功能，目前还有不少BUG，但对于常打开多个窗口查找文件来说，还是十分方便。
-
 
 [护眼宝](http://www.huyanbao.com)：修改屏幕色彩，相传更护眼。有Android、iOS、MAC、windows版。
 
